<resources>
    <string name="app_name">Just in time cycling</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYW5kcmVpMTkxOTk5IiwiYSI6ImNrZ2o4NTA2aDA2cHczMG5hZ2VqcmNxM2kifQ.kMaDVE0inOimnQ6q1-RETw</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="img_desc">Background image</string>


    <string name="directions">Calculate route</string>
    <string name="map_view">Map view</string>
    <string name="routes_view">Routes</string>

<!--    places strings-->
    <string name="pick_place">Pick a place</string>
    <string name="search_place">Search place</string>
    <string name="option_get_place">Get place</string>

<!--    register/login strings-->
    <string name="email_hint">Email</string>
    <string name="name_hint_reg">Name</string>
    <string name="pass_hint">Password</string>
    <string name="reg_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="login_text_reg">Already have an account? Log in here.</string>
    <string name="pass_repeat_hint_reg">Confirm password</string>
    <string name="reg_text_login">New here? Create an account here</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="distance">Distance:</string>
    <string name="eta">ETA:</string>
    <string name="time_left">Duration:</string>
    <string name="show_trip_dets">Show trip details</string>

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- Location change listening -->
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>

    <!-- LocationComponent camera options -->
    <string name="normal">Normal</string>
    <string name="compass">Compass</string>
    <string name="gps">GPS</string>
    <string name="none">None</string>
    <string name="none_compass">None\nCompass</string>
    <string name="none_gps">None GPS</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_compass">Tracking\nCompass</string>
    <string name="tracking_gps">Tracking\nGPS</string>
    <string name="tracking_gps_north">Tracking\nGPS North</string>
    <string name="clicked_on_location_component">Clicked on LocationComponent</string>
    <string name="mylocationbtn">myLocationBtn</string>

    <!--Custom location layer plugin icon-->
    <string name="current_location">Lat: %1$f Long: %2$f</string>
    <string name="tracking_enabled">Tracking mode re-enabled</string>
    <string name="tracking_already_enabled">Tracking already enabled. Move the map</string>
    <string name="start_navigation">Start navigation</string>
    <string name="mode_txt_view">Mode:</string>
    <string name="basic_mode_btn">Normal</string>
    <string name="tracking_txt_view">Tracking:</string>
    <string name="basic_tracking_btn">None</string>

    <!--QueryFeatureActivity activity-->
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>

    <!--LocationPickerActivity activity-->
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
</resources>